fix: correct z-index value in main style for proper layering

--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -3,7 +3,6 @@ main {
     padding-top: 8rem;
     position: relative;
     inset: 0;
-    z-index: -198789;
     background-image: url(/assets/images/redcity2.png);
     background-size: cover;
     background-position: center;
